--- a/public/back/first.html
+++ b/public/back/first.html
@@ -55,40 +55,90 @@
             <ol class="breadcrumb">
               <li><a href="#">管理系统</a></li>
               <li><a href="#">分类管理</a></li>
-              <li><a href="#">一级分类</a></li>
+              <li class="active">一级分类</li>
             </ol>
 
             <!-- 内容区域 -->
             <div class="lt_content">
-                <div class="pic_left pull-left">11</div>
-                <div class="pic_right pull-right">22</div>
+                <button class="btn_add btn btn-default mb20">添加分类</button>
+
+                <table class="table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <td width="20%">序号</td>
+                            <td width="80%">分类名称</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        
+                    </tbody>
+                </table>
+
+                <div class="text-right">
+                    <ul id="paginator"></ul>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="modal fade" tabindex="-1" id="logoutModal">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">温馨提示</h4>
-      </div>
-      <div class="modal-body">
-        <p class="text-danger"><span class="glyphicon glyphicon-info-sign"></span>您确定要退出后台管理系统吗？</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-        <button type="button" class="btn_logout btn btn-primary">确定</button>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">温馨提示</h4>
+          </div>
+          <div class="modal-body">
+            <p class="text-danger"><span class="glyphicon glyphicon-info-sign"></span>您确定要退出后台管理系统吗？</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="button" class="btn_logout btn btn-primary">确定</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <div class="modal fade" tabindex="-1" id="addModal">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">添加一级分类</h4>
+          </div>
+          <div class="modal-body">
+
+            <form id="form">
+              <div class="form-group">
+                <input type="text" class="form-control" id="categoryName" name="categoryName" placeholder="请输入一级分类">
+              </div>
+            </form>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" form="form" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="submit" form="form" class="btn_confirm btn btn-primary">确定</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <script type="text/html" id="tpl">
+        {{each rows v i}}
+        <tr>
+            <td>{{(page-1)*size+i+1}}</td>
+            <td>{{v.categoryName}}</td>
+        </tr>
+        {{/each}}
+    </script>
 
 <script src="lib/jquery/jquery.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
 <script src="lib/bootstrap-validator/js/bootstrapValidator.js"></script>
+<script src="lib/bootstrap-paginator/bootstrap-paginator.js"></script>
 <script src="lib/nprogress/nprogress.js"></script>
+<script src="lib/artTemplate/template-web.js"></script>
 <script src="js/common.js"></script>
-<script src="js/index.js"></script>
+<script src="js/first.js"></script>
 </body>
 </html>
