--- a/public/back/second.html
+++ b/public/back/second.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>我的乐淘管理系统-分类管理</title>
+    <title>我的乐淘管理系统-二级分类</title>
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="lib/bootstrap-validator/css/bootstrapValidator.css">
     <link rel="stylesheet" href="lib/nprogress/nprogress.css">
@@ -55,40 +55,133 @@
             <ol class="breadcrumb">
               <li><a href="#">管理系统</a></li>
               <li><a href="#">分类管理</a></li>
-              <li><a href="#">二级分类</a></li>
+              <li class="active">二级分类</li>
             </ol>
 
             <!-- 内容区域 -->
             <div class="lt_content">
-                <div class="pic_left pull-left">11</div>
-                <div class="pic_right pull-right">22</div>
+
+                <button class="btn_add btn btn-default mb20">添加二级分类</button>
+
+                <table class="table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <td width="10%">序号</td>
+                            <td width="30%">一级分类名称</td>
+                            <td width="30%">二级分类名称</td>
+                            <td width="30%">二级分类Logo</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- 挖个坑 -->
+
+                    </tbody>
+                </table>
+
+                <div class="text-right">
+                    <ul id="paginator"></ul>
+                </div>
+
             </div>
         </div>
     </div>
 
     <div class="modal fade" tabindex="-1" id="logoutModal">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">温馨提示</h4>
-      </div>
-      <div class="modal-body">
-        <p class="text-danger"><span class="glyphicon glyphicon-info-sign"></span>您确定要退出后台管理系统吗？</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-        <button type="button" class="btn_logout btn btn-primary">确定</button>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">温馨提示</h4>
+          </div>
+          <div class="modal-body">
+            <p class="text-danger"><span class="glyphicon glyphicon-info-sign"></span>您确定要退出后台管理系统吗？</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="button" class="btn_logout btn btn-primary">确定</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <div class="modal fade" tabindex="-1" id="addModal">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">添加二级分类</h4>
+          </div>
+          <div class="modal-body">
+
+            <form id="form">
+                <div class="form-group">
+                <div class="dropdown">
+                  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <span class="dropdown-text">请选择一级分类</span>
+                    <input type="hidden" name="categoryId" id="categoryId">
+                    <input type="hidden" name="hot" value="1">
+                    <span class="caret"></span>
+                  </button>
+
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <!-- 挖个坑 -->
+                  </ul>
+                </div>
+                </div>
+
+              <div class="form-group">
+                <input type="text" class="form-control" id="brandName" name="brandName" placeholder="请输入二级分类名称">
+              </div>
+
+              <div class="form-group">
+                <div class="fileupload_box">
+                <button class="btn btn-default">上传图片</button>
+                <input type="file" id="fileupload" name="pic1" class="btn btn-default" data-url="/category/addSecondCategoryPic">
+                </div>
+              </div>
+
+              <div class="form-group img_box">
+                  <img src="images/none.png" width="100" height="100" alt="">
+                  <input type="hidden" name="brandLogo" id="brandLogo">
+              </div>
+
+            </form>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" form="form" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="submit" form="form" class="btn_confirm btn btn-primary">确定</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <script type="text/html" id="tpl">
+        {{each rows v i}}
+        <tr>
+            <td>{{(page-1)*size+i+1}}</td>
+            <td>{{v.categoryName}}</td>
+            <td>{{v.brandName}}</td>
+            <td><img width="50" height="50" src="{{v.brandLogo?v.brandLogo:'images/none.png'}}"></td>
+        </tr>
+        {{/each}}
+    </script>
+
+    <script type="text/html" id="tpl2">
+        {{each rows v i}}
+        <li><a href="javascript:;" data-id="{{v.id}}">{{v.categoryName}}</a></li>
+        {{/each}}
+    </script>
 
 <script src="lib/jquery/jquery.js"></script>
+<script src="lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script src="lib/jquery-fileupload/jquery.fileupload.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
 <script src="lib/bootstrap-validator/js/bootstrapValidator.js"></script>
 <script src="lib/nprogress/nprogress.js"></script>
+<script src="lib/bootstrap-paginator/bootstrap-paginator.js"></script>
+<script src="lib/artTemplate/template-web.js"></script>
 <script src="js/common.js"></script>
-<script src="js/index.js"></script>
+<script src="js/second.js"></script>
 </body>
 </html>
