--- a/public/front/index.html
+++ b/public/front/index.html
@@ -72,7 +72,7 @@
 					</div>
 
 					<!-- 商品 -->
-					<div class="lt_product">
+					<div class="lt_product mui-clearfix">
 						<a href="#" class="item"><img src="images/product.jpg"><p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700</p><p><span>&yen;560</span><span>&yen;580</span></p>
 						<button class="mui-btn-blue">立即购买</button></a>
 						<a href="#" class="item"><img src="images/product.jpg"><p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700</p><p><span>&yen;560</span><span>&yen;580</span></p>
