--- a/public/front/searchList.html
+++ b/public/front/searchList.html
@@ -3,18 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>我的乐淘-搜索页</title>
+	<title>我的乐淘-搜索列表</title>
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="lib/fa/css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="lib/mui/css/mui.css">
 	<link rel="stylesheet" type="text/css" href="css/common.css">
-	<link rel="stylesheet" type="text/css" href="css/search.css">
+	<link rel="stylesheet" type="text/css" href="css/searchList.css">
 </head>
 <body>
 	<div class="lt_container">
 		<div class="lt_header">
 			<a href="javascript:history.go(-1);" class="icon_left"><span class="fa fa-chevron-left"></span></a>
-			<h4>搜索中心</h4>
+			<h4>商品列表</h4>
 			
 		</div>
 
@@ -27,7 +27,17 @@
 						<button class="search_btn mui-btn-blue">搜索</button>
 					</div>
 
-					<div class="lt_history">
+					<!-- 排序div -->
+					<div class="lt_sort">
+						<a href="javascript:;">上架时间<span class="fa fa-angle-down"></span></a>
+						<a data-type='price' href="javascript:;">价格<span class="fa fa-angle-down"></span></a>
+						<a data-type='num' href="javascript:;">库存<span class="fa fa-angle-down"></span></a>
+						<a href="javascript:;">折扣<span class="fa fa-angle-down"></span></a>
+					</div>
+
+					<!-- 商品 -->
+					<div class="lt_product mui-clearfix">
+						<div class="loading"></div>
 						<!-- 挖个坑 -->
 					</div>
 				</div>
@@ -47,30 +57,23 @@
 
 	</div>
 	<script type="text/html" id="tpl">
-		{{if arr.length == 0}}
-		<p>没有搜索记录</p>
+		{{if data.length==0}}
+		<p>没有搜索到相关的商品</p>
 		{{/if}}
 
-		{{if arr.length > 0}}
-		<div class="title mui-clearfix">
-			<span class="mui-pull-left">搜索历史</span>
-			<span class="mui-pull-right fa fa-trash icon_empty">清空记录</span>
-		</div>
-
-		<ul class="content">
-			{{each arr v i}}
-			<li class="mui-clearfix"><a href="searchList.html?key={{v}}" class="mui-pull-left">{{v}}</a>
-			<span data-index="{{i}}" class="mui-pull-right mui-icon mui-icon-closeempty"></span>
-			<!-- <span data-index="{{i}}" class="mui-pull-right fa fa-close"></span> -->
-			</li>
-			{{/each}}
-		</ul>
-		{{/if}}
+		{{each data v i}}
+		<a href="product.html?productId={{v.id}}" class="item">
+		<img src="{{v.pic[0].picAddr}}">
+		<p class="mui-ellipsis-2">{{v.proName}}</p>
+		<p><span>&yen;{{v.price}}</span><span>&yen;{{v.oldPrice}}</span></p>
+		<button class="mui-btn-blue">立即购买</button></a>
+		{{/each}}
 	</script>
 
 	<script src="lib/mui/js/mui.js"></script>
 	<script src="lib/zepto/zepto.min.js"></script>
 	<script src="lib/artTemplate/template-web.js"></script>
-	<script src="js/search.js"></script>
+	<script src="js/common.js"></script>
+	<script src="js/searchList.js"></script>
 </body>
 </html>
